<resources>
    <string name="app_name">Skincare app</string>
    <string name="skincare_name">Skincare Name</string>
    <string name="skincare_harga">Skincare Harga</string>
    <string name="thumbnail_image">thumbnail image</string>
    <string name="nama_skincare">nama skincare</string>
    <string name="harga_skincare">harga skincare</string>
    <string name="manfaat_skincare">manfaat skincare</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="profile">Profile</string>
    <string name="anselakamila">anselakamila</string>
</resources>