<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.DetailSkincareActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/thumbnail_image"
            android:adjustViewBounds="true">
        </ImageView>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nama_skincare"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/tv_item_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/harga_skincare"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:id="@+id/tv_item_manfaat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/manfaat_skincare"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

</ScrollView>